# hildon-home

./: ChangeLog  Makefile.am  README  com.nokia.HildonHome.service.in  com.nokia.HildonSVNotificationDaemon.service.in  configure.ac  hildon-home.schemas  org.freedesktop.Notifications.service.in
debian/: changelog  conffiles  control  hildon-home.init  hildon-home.install  hildon-home.xsession  hildon-sv-notification-daemon.xsession  launcher  rules
src/: Makefile.am  hd-activate-views-dialog.c  hd-activate-views-dialog.h  hd-add-applet-dialog.c  hd-add-bookmark-dialog.c  hd-add-bookmark-dialog.h  hd-add-task-dialog.c  hd-applet-manager.c  hd-applet-manager.h  hd-available-backgrounds.c  hd-available-backgrounds.h  hd-background-dialog.c  hd-background-dialog.h  hd-background-helper.c  hd-background-helper.h  hd-background-info.c  hd-background-info.h  hd-background.c  hd-background.h  hd-backgrounds.c  hd-backgrounds.h  hd-bookmark-manager.c  hd-bookmark-manager.h  hd-bookmark-shortcut.c  hd-bookmark-shortcut.h  hd-bookmark-widgets.c  hd-bookmark-widgets.h  hd-cairo-surface-cache.c  hd-cairo-surface-cache.h  hd-change-background-dialog.c  hd-change-background-dialog.h  hd-command-thread-pool.c  hd-command-thread-pool.h  hd-dbus-utils.c  hd-dbus-utils.h  hd-desktop.h  hd-edit-mode-menu.c  hd-edit-mode-menu.h  hd-file-background.c  hd-file-background.h  (+57 more)
